--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,17 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
+	<repositories>
+        <repository>
+        	<id>github</id>
+        	<url>https://maven.pkg.github.com/javiertuya/*</url>
+        	<snapshots>
+            	<enabled>true</enabled>
+        	</snapshots>
+        </repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>giis</groupId>
