--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           #remove cache for testing
           #cache: 'maven'
       - name: Build and test
-        run: mvn test -Dmaven.test.failure.ignore=true -U --no-transfer-progress
+        run: mvn test -Dmaven.test.failure.ignore=true -U #--no-transfer-progress
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
